Issue 4512 Evolve idle run mechanism: IDLE_CPU, IDLE_GPU tags(#4533)